--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -286,21 +286,13 @@ depgen:
  cmd-core.h generate.h monster.h mon-timed.h list-mon-timed.h \
  mon-blow-methods.h list-blow-methods.h mon-blow-effects.h \
  list-blow-effects.h list-mon-temp-flags.h list-mon-race-flags.h \
- list-mon-spells.h hint.h keymap.h init.h parser.h mon-init.h mon-list.h \
+ list-mon-spells.h hint.h init.h parser.h mon-init.h mon-list.h \
  mon-lore.h z-textblock.h mon-msg.h mon-util.h obj-ignore.h \
  list-ignore-types.h obj-list.h obj-make.h obj-randart.h obj-slays.h \
  obj-tval.h list-tvals.h obj-util.h player-history.h list-history-types.h \
  player-quest.h player-spell.h player-timed.h list-player-timed.h \
  project.h list-project-environs.h list-project-monsters.h randname.h \
  store.h trap.h list-trap-flags.h list-equip-slots.h
-./keymap.o: keymap.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
- z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
- message-list.h option.h z-file.h list-options.h player.h guid.h \
- obj-properties.h list-stats.h list-object-flags.h list-kind-flags.h \
- list-object-modifiers.h object.h z-quark.h z-dice.h z-expression.h \
- effects.h list-effects.h list-elements.h list-identify-flags.h \
- list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
- keymap.h ui-term.h ui-event.h
 ./load.o: load.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -955,15 +947,6 @@ depgen:
  list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
  buildid.h game-world.h cave.h list-square-flags.h list-terrain-flags.h \
  init.h parser.h score.h
-./signals.o: signals.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
- z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
- message-list.h option.h z-file.h list-options.h player.h guid.h \
- obj-properties.h list-stats.h list-object-flags.h list-kind-flags.h \
- list-object-modifiers.h object.h z-quark.h z-dice.h z-expression.h \
- effects.h list-effects.h list-elements.h list-identify-flags.h \
- list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
- game-world.h cave.h list-square-flags.h list-terrain-flags.h savefile.h \
- signals.h ui-game.h cmd-core.h ui-term.h ui-event.h
 ./save.o: save.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -1020,12 +1003,11 @@ depgen:
  effects.h list-effects.h list-elements.h list-identify-flags.h \
  list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
  cave.h list-square-flags.h list-terrain-flags.h cmd-core.h game-input.h \
- keymap.h mon-desc.h monster.h mon-timed.h list-mon-timed.h \
- mon-blow-methods.h list-blow-methods.h mon-blow-effects.h \
- list-blow-effects.h list-mon-temp-flags.h list-mon-race-flags.h \
- list-mon-spells.h mon-util.h obj-ignore.h list-ignore-types.h \
- player-timed.h list-player-timed.h project.h list-project-environs.h \
- list-project-monsters.h target.h
+ mon-desc.h monster.h mon-timed.h list-mon-timed.h mon-blow-methods.h \
+ list-blow-methods.h mon-blow-effects.h list-blow-effects.h \
+ list-mon-temp-flags.h list-mon-race-flags.h list-mon-spells.h mon-util.h \
+ obj-ignore.h list-ignore-types.h player-timed.h list-player-timed.h \
+ project.h list-project-environs.h list-project-monsters.h target.h
 ./trap.o: trap.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -1064,15 +1046,14 @@ depgen:
  list-identify-flags.h list-origins.h player-calcs.h list-player-flags.h \
  list-magic-realms.h buildid.h cave.h list-square-flags.h \
  list-terrain-flags.h cmd-core.h cmds.h game-input.h game-world.h init.h \
- parser.h keymap.h monster.h mon-timed.h list-mon-timed.h \
- mon-blow-methods.h list-blow-methods.h mon-blow-effects.h \
- list-blow-effects.h list-mon-temp-flags.h list-mon-race-flags.h \
- list-mon-spells.h obj-gear.h list-equip-slots.h obj-util.h \
- player-attack.h player-timed.h list-player-timed.h player-util.h store.h \
- target.h ui.h ui-event.h ui-term.h z-textblock.h ui-command.h \
- ui-display.h ui-help.h ui-input.h ui-map.h ui-menu.h ui-options.h \
- obj-ignore.h list-ignore-types.h ui-player.h ui-prefs.h ui-target.h \
- wizard.h
+ parser.h monster.h mon-timed.h list-mon-timed.h mon-blow-methods.h \
+ list-blow-methods.h mon-blow-effects.h list-blow-effects.h \
+ list-mon-temp-flags.h list-mon-race-flags.h list-mon-spells.h obj-gear.h \
+ list-equip-slots.h obj-util.h player-attack.h player-timed.h \
+ list-player-timed.h player-util.h store.h target.h ui.h ui-event.h \
+ ui-term.h z-textblock.h ui-command.h ui-display.h ui-help.h ui-input.h \
+ ui-keymap.h ui-map.h ui-menu.h ui-options.h obj-ignore.h \
+ list-ignore-types.h ui-player.h ui-prefs.h ui-target.h wizard.h
 ./ui-context.o: ui-context.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
  message.h message-list.h option.h z-file.h list-options.h player.h \
@@ -1081,7 +1062,7 @@ depgen:
  z-expression.h effects.h list-effects.h list-elements.h \
  list-identify-flags.h list-origins.h player-calcs.h list-player-flags.h \
  list-magic-realms.h cave.h list-square-flags.h list-terrain-flags.h \
- cmd-core.h cmds.h game-input.h keymap.h mon-desc.h monster.h mon-timed.h \
+ cmd-core.h cmds.h game-input.h mon-desc.h monster.h mon-timed.h \
  list-mon-timed.h mon-blow-methods.h list-blow-methods.h \
  mon-blow-effects.h list-blow-effects.h list-mon-temp-flags.h \
  list-mon-race-flags.h list-mon-spells.h mon-lore.h z-textblock.h \
@@ -1089,8 +1070,9 @@ depgen:
  obj-identify.h obj-ignore.h list-ignore-types.h obj-info.h obj-tval.h \
  list-tvals.h obj-util.h player-timed.h list-player-timed.h player-util.h \
  store.h parser.h target.h ui-context.h ui-input.h ui-event.h ui-term.h \
- ui-game.h ui-knowledge.h ui-menu.h ui.h ui-mon-lore.h ui-obj.h \
- ui-object.h ui-player.h ui-spell.h ui-store.h ui-target.h wizard.h
+ ui-game.h ui-keymap.h ui-knowledge.h ui-menu.h ui.h ui-mon-lore.h \
+ ui-obj.h ui-object.h ui-player.h ui-spell.h ui-store.h ui-target.h \
+ wizard.h
 ./ui-death.o: ui-death.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -1137,14 +1119,15 @@ depgen:
  effects.h list-effects.h list-elements.h list-identify-flags.h \
  list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
  cmds.h cave.h list-square-flags.h list-terrain-flags.h cmd-core.h \
- game-world.h init.h parser.h keymap.h mon-lore.h z-textblock.h monster.h \
+ game-world.h init.h parser.h mon-lore.h z-textblock.h monster.h \
  mon-timed.h list-mon-timed.h mon-blow-methods.h list-blow-methods.h \
  mon-blow-effects.h list-blow-effects.h list-mon-temp-flags.h \
  list-mon-race-flags.h list-mon-spells.h obj-util.h player-attack.h \
- player-path.h player-util.h savefile.h signals.h ui-birth.h ui-command.h \
+ player-path.h player-util.h savefile.h ui-birth.h ui-command.h \
  ui-context.h ui-input.h ui-event.h ui-term.h ui-death.h ui-display.h \
- ui-game.h ui-help.h ui-knowledge.h ui-map.h ui-obj.h ui-object.h \
- ui-player.h ui-prefs.h ui-spell.h ui-score.h ui-store.h ui-target.h ui.h
+ ui-game.h ui-help.h ui-keymap.h ui-knowledge.h ui-map.h ui-obj.h \
+ ui-object.h ui-player.h ui-prefs.h ui-spell.h ui-score.h ui-signals.h \
+ ui-store.h ui-target.h ui.h
 ./ui-help.o: ui-help.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -1171,8 +1154,8 @@ depgen:
  effects.h list-effects.h list-elements.h list-identify-flags.h \
  list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
  game-input.h cmd-core.h ui-display.h ui-game.h ui-input.h ui-event.h \
- ui-term.h ui-knowledge.h ui-prefs.h cave.h list-square-flags.h \
- list-terrain-flags.h ui.h z-textblock.h
+ ui-term.h ui-keymap.h ui-knowledge.h ui-prefs.h cave.h \
+ list-square-flags.h list-terrain-flags.h ui.h z-textblock.h
 ./ui-input.o: ui-input.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -1181,12 +1164,19 @@ depgen:
  effects.h list-effects.h list-elements.h list-identify-flags.h \
  list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
  cmds.h cave.h list-square-flags.h list-terrain-flags.h cmd-core.h \
- game-input.h game-world.h init.h parser.h keymap.h obj-gear.h \
- list-equip-slots.h obj-util.h player-path.h randname.h signals.h \
- target.h ui-command.h ui-context.h ui-input.h ui-event.h ui-term.h \
- ui-display.h ui-help.h ui-knowledge.h ui-map.h ui-obj.h ui-object.h \
- ui-player.h ui-prefs.h ui-spell.h ui-store.h ui-target.h ui.h \
- z-textblock.h
+ game-input.h game-world.h init.h parser.h obj-gear.h list-equip-slots.h \
+ obj-util.h player-path.h randname.h target.h ui-command.h ui-context.h \
+ ui-input.h ui-event.h ui-term.h ui-display.h ui-help.h ui-keymap.h \
+ ui-knowledge.h ui-map.h ui-obj.h ui-object.h ui-player.h ui-prefs.h \
+ ui-signals.h ui-spell.h ui-store.h ui-target.h ui.h z-textblock.h
+./ui-keymap.o: ui-keymap.c angband.h h-basic.h z-bitflag.h z-form.h \
+ z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
+ message.h message-list.h option.h z-file.h list-options.h player.h \
+ guid.h obj-properties.h list-stats.h list-object-flags.h \
+ list-kind-flags.h list-object-modifiers.h object.h z-quark.h z-dice.h \
+ z-expression.h effects.h list-effects.h list-elements.h \
+ list-identify-flags.h list-origins.h player-calcs.h list-player-flags.h \
+ list-magic-realms.h ui-keymap.h ui-term.h ui-event.h
 ./ui-knowledge.o: ui-knowledge.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
  message.h message-list.h option.h z-file.h list-options.h player.h \
@@ -1261,10 +1251,10 @@ depgen:
  effects.h list-effects.h list-elements.h list-identify-flags.h \
  list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
  cmd-core.h cmds.h cave.h list-square-flags.h list-terrain-flags.h \
- game-input.h init.h parser.h keymap.h obj-desc.h obj-gear.h \
- list-equip-slots.h obj-identify.h obj-info.h z-textblock.h obj-make.h \
- obj-pile.h obj-tval.h list-tvals.h obj-util.h store.h ui-display.h \
- ui-game.h ui-input.h ui-event.h ui-term.h ui-obj.h ui-prefs.h ui.h
+ game-input.h init.h parser.h obj-desc.h obj-gear.h list-equip-slots.h \
+ obj-identify.h obj-info.h z-textblock.h obj-make.h obj-pile.h obj-tval.h \
+ list-tvals.h obj-util.h store.h ui-display.h ui-game.h ui-input.h \
+ ui-event.h ui-term.h ui-keymap.h ui-obj.h ui-prefs.h ui.h
 ./ui-obj-list.o: ui-obj-list.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
  message.h message-list.h option.h z-file.h list-options.h player.h \
@@ -1296,10 +1286,10 @@ depgen:
  z-expression.h effects.h list-effects.h list-elements.h \
  list-identify-flags.h list-origins.h player-calcs.h list-player-flags.h \
  list-magic-realms.h cmds.h cave.h list-square-flags.h \
- list-terrain-flags.h cmd-core.h game-input.h init.h parser.h keymap.h \
- obj-desc.h obj-ignore.h list-ignore-types.h obj-tval.h list-tvals.h \
- obj-util.h tables.h ui-display.h ui-help.h ui-input.h ui-event.h \
- ui-term.h ui-knowledge.h ui-menu.h ui.h z-textblock.h ui-options.h \
+ list-terrain-flags.h cmd-core.h game-input.h init.h parser.h obj-desc.h \
+ obj-ignore.h list-ignore-types.h obj-tval.h list-tvals.h obj-util.h \
+ tables.h ui-display.h ui-help.h ui-input.h ui-event.h ui-term.h \
+ ui-keymap.h ui-knowledge.h ui-menu.h ui.h z-textblock.h ui-options.h \
  ui-prefs.h ui-target.h
 ./ui-player.o: ui-player.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
@@ -1322,13 +1312,13 @@ depgen:
  effects.h list-effects.h list-elements.h list-identify-flags.h \
  list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
  cave.h list-square-flags.h list-terrain-flags.h game-input.h cmd-core.h \
- grafmode.h init.h parser.h keymap.h mon-util.h monster.h mon-timed.h \
+ grafmode.h init.h parser.h mon-util.h monster.h mon-timed.h \
  list-mon-timed.h mon-blow-methods.h list-blow-methods.h \
  mon-blow-effects.h list-blow-effects.h list-mon-temp-flags.h \
  list-mon-race-flags.h list-mon-spells.h obj-ignore.h list-ignore-types.h \
  obj-tval.h list-tvals.h obj-util.h project.h list-project-environs.h \
- list-project-monsters.h trap.h list-trap-flags.h ui-display.h ui-prefs.h \
- ui-term.h ui-event.h
+ list-project-monsters.h trap.h list-trap-flags.h ui-display.h \
+ ui-keymap.h ui-prefs.h ui-term.h ui-event.h
 ./ui-score.o: ui-score.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -1339,6 +1329,16 @@ depgen:
  buildid.h game-world.h cave.h list-square-flags.h list-terrain-flags.h \
  score.h ui-score.h ui-input.h cmd-core.h ui-event.h ui-term.h ui.h \
  z-textblock.h
+./ui-signals.o: ui-signals.c angband.h h-basic.h z-bitflag.h z-form.h \
+ z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
+ message.h message-list.h option.h z-file.h list-options.h player.h \
+ guid.h obj-properties.h list-stats.h list-object-flags.h \
+ list-kind-flags.h list-object-modifiers.h object.h z-quark.h z-dice.h \
+ z-expression.h effects.h list-effects.h list-elements.h \
+ list-identify-flags.h list-origins.h player-calcs.h list-player-flags.h \
+ list-magic-realms.h game-world.h cave.h list-square-flags.h \
+ list-terrain-flags.h savefile.h ui-game.h cmd-core.h ui-signals.h \
+ ui-term.h ui-event.h
 ./ui-spell.o: ui-spell.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -1375,15 +1375,15 @@ depgen:
  z-expression.h effects.h list-effects.h list-elements.h \
  list-identify-flags.h list-origins.h player-calcs.h list-player-flags.h \
  list-magic-realms.h cave.h list-square-flags.h list-terrain-flags.h \
- game-input.h cmd-core.h init.h parser.h keymap.h mon-desc.h monster.h \
- mon-timed.h list-mon-timed.h mon-blow-methods.h list-blow-methods.h \
+ game-input.h cmd-core.h init.h parser.h mon-desc.h monster.h mon-timed.h \
+ list-mon-timed.h mon-blow-methods.h list-blow-methods.h \
  mon-blow-effects.h list-blow-effects.h list-mon-temp-flags.h \
  list-mon-race-flags.h list-mon-spells.h mon-lore.h z-textblock.h \
  obj-desc.h obj-pile.h obj-util.h player-attack.h player-timed.h \
  list-player-timed.h project.h list-project-environs.h \
  list-project-monsters.h tables.h target.h trap.h list-trap-flags.h ui.h \
- ui-event.h ui-term.h ui-input.h ui-map.h ui-mon-lore.h ui-obj.h \
- ui-target.h
+ ui-event.h ui-term.h ui-input.h ui-keymap.h ui-map.h ui-mon-lore.h \
+ ui-obj.h ui-target.h
 ./ui-term.o: ui-term.c buildid.h h-basic.h ui-term.h ui-event.h z-color.h \
  z-util.h z-virt.h
 ./wiz-debug.o: wiz-debug.c angband.h h-basic.h z-bitflag.h z-form.h \
