--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -29,8 +29,8 @@ depgen:
  mon-blow-methods.h list-blow-methods.h mon-blow-effects.h \
  list-blow-effects.h list-mon-temp-flags.h list-mon-race-flags.h \
  list-mon-spells.h obj-ignore.h list-ignore-types.h obj-pile.h obj-tval.h \
- list-tvals.h obj-util.h player-timed.h list-player-timed.h tables.h \
- trap.h list-trap-flags.h
+ list-tvals.h obj-util.h player-timed.h list-player-timed.h trap.h \
+ list-trap-flags.h
 ./cave-map.o: cave-map.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -43,7 +43,7 @@ depgen:
  list-blow-methods.h mon-blow-effects.h list-blow-effects.h \
  list-mon-temp-flags.h list-mon-race-flags.h list-mon-spells.h \
  obj-ignore.h list-ignore-types.h obj-tval.h list-tvals.h obj-util.h \
- player-timed.h list-player-timed.h tables.h trap.h list-trap-flags.h
+ player-timed.h list-player-timed.h trap.h list-trap-flags.h
 ./cave-square.o: cave-square.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
  message.h message-list.h option.h z-file.h list-options.h player.h \
@@ -82,8 +82,7 @@ depgen:
  list-mon-spells.h init.h parser.h mon-desc.h mon-lore.h z-textblock.h \
  mon-util.h obj-chest.h obj-identify.h obj-ignore.h list-ignore-types.h \
  obj-util.h player-attack.h player-path.h player-timed.h \
- list-player-timed.h player-util.h store.h tables.h trap.h \
- list-trap-flags.h
+ list-player-timed.h player-util.h store.h trap.h list-trap-flags.h
 ./cmd-core.o: cmd-core.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -135,7 +134,7 @@ depgen:
  z-textblock.h mon-util.h obj-desc.h obj-gear.h list-equip-slots.h \
  obj-identify.h obj-ignore.h list-ignore-types.h obj-pile.h obj-tval.h \
  list-tvals.h obj-util.h player-attack.h player-history.h \
- list-history-types.h player-util.h tables.h trap.h list-trap-flags.h
+ list-history-types.h player-util.h trap.h list-trap-flags.h
 ./debug.o: debug.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -160,8 +159,8 @@ depgen:
  obj-gear.h list-equip-slots.h obj-identify.h obj-ignore.h \
  list-ignore-types.h obj-make.h obj-pile.h obj-power.h obj-tval.h \
  list-tvals.h obj-util.h player-timed.h list-player-timed.h player-util.h \
- project.h list-project-environs.h list-project-monsters.h tables.h \
- target.h trap.h list-trap-flags.h
+ project.h list-project-environs.h list-project-monsters.h target.h \
+ trap.h list-trap-flags.h
 ./game-event.o: game-event.c game-event.h z-type.h h-basic.h object.h \
  z-rand.h z-quark.h z-bitflag.h z-form.h z-virt.h z-dice.h z-expression.h \
  obj-properties.h z-file.h list-stats.h list-object-flags.h \
@@ -189,7 +188,7 @@ depgen:
  list-mon-temp-flags.h list-mon-race-flags.h list-mon-spells.h mon-move.h \
  mon-util.h obj-desc.h obj-gear.h list-equip-slots.h obj-identify.h \
  obj-tval.h list-tvals.h obj-util.h player-timed.h list-player-timed.h \
- player-util.h tables.h target.h
+ player-util.h target.h
 ./generate.o: generate.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -214,7 +213,7 @@ depgen:
  monster.h mon-timed.h list-mon-timed.h mon-blow-methods.h \
  list-blow-methods.h mon-blow-effects.h list-blow-effects.h \
  list-mon-temp-flags.h list-mon-race-flags.h list-mon-spells.h init.h \
- parser.h mon-make.h mon-spell.h store.h cmd-core.h tables.h trap.h \
+ parser.h mon-make.h mon-spell.h store.h cmd-core.h trap.h \
  list-trap-flags.h z-queue.h
 ./gen-chunk.o: gen-chunk.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
@@ -251,8 +250,7 @@ depgen:
  mon-timed.h list-mon-timed.h mon-blow-methods.h list-blow-methods.h \
  mon-blow-effects.h list-blow-effects.h list-mon-temp-flags.h \
  list-mon-race-flags.h list-mon-spells.h init.h parser.h mon-make.h \
- mon-spell.h obj-tval.h list-tvals.h tables.h trap.h list-trap-flags.h \
- z-queue.h
+ mon-spell.h obj-tval.h list-tvals.h trap.h list-trap-flags.h z-queue.h
 ./gen-util.o: gen-util.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -265,7 +263,7 @@ depgen:
  mon-blow-effects.h list-blow-effects.h list-mon-temp-flags.h \
  list-mon-race-flags.h list-mon-spells.h init.h parser.h mon-make.h \
  mon-spell.h obj-make.h obj-pile.h obj-tval.h list-tvals.h obj-util.h \
- tables.h trap.h list-trap-flags.h z-queue.h
+ trap.h list-trap-flags.h z-queue.h
 ./grafmode.o: grafmode.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -421,7 +419,7 @@ depgen:
  list-blow-effects.h list-mon-temp-flags.h list-mon-race-flags.h \
  list-mon-spells.h mon-lore.h z-textblock.h mon-make.h mon-util.h \
  obj-identify.h obj-make.h obj-pile.h obj-tval.h list-tvals.h obj-util.h \
- player-history.h list-history-types.h player-quest.h tables.h target.h
+ player-history.h list-history-types.h player-quest.h target.h
 ./mon-move.o: mon-move.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -436,8 +434,7 @@ depgen:
  mon-attack.h mon-desc.h mon-lore.h z-textblock.h mon-make.h mon-spell.h \
  mon-util.h obj-desc.h obj-ignore.h list-ignore-types.h obj-pile.h \
  obj-slays.h obj-tval.h list-tvals.h obj-util.h player-util.h project.h \
- list-project-environs.h list-project-monsters.h tables.h trap.h \
- list-trap-flags.h
+ list-project-environs.h list-project-monsters.h trap.h list-trap-flags.h
 ./mon-msg.o: mon-msg.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -528,7 +525,7 @@ depgen:
  list-blow-effects.h list-mon-temp-flags.h list-mon-race-flags.h \
  list-mon-spells.h obj-chest.h obj-identify.h obj-make.h obj-pile.h \
  obj-tval.h list-tvals.h obj-util.h player-timed.h list-player-timed.h \
- player-util.h tables.h
+ player-util.h
 ./obj-desc.o: obj-desc.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -740,7 +737,7 @@ depgen:
  mon-make.h mon-msg.h mon-util.h obj-desc.h obj-gear.h list-equip-slots.h \
  obj-identify.h obj-pile.h obj-slays.h obj-util.h player-attack.h \
  player-util.h project.h list-project-environs.h list-project-monsters.h \
- tables.h target.h
+ target.h
 ./player-birth.o: player-birth.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
  message.h message-list.h option.h z-file.h list-options.h player.h \
@@ -801,7 +798,7 @@ depgen:
  mon-timed.h list-mon-timed.h mon-blow-methods.h list-blow-methods.h \
  mon-blow-effects.h list-blow-effects.h list-mon-temp-flags.h \
  list-mon-race-flags.h list-mon-spells.h obj-ignore.h list-ignore-types.h \
- obj-util.h player-path.h player-util.h tables.h
+ obj-util.h player-path.h player-util.h
 ./player-quest.o: player-quest.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
  message.h message-list.h option.h z-file.h list-options.h player.h \
@@ -858,7 +855,7 @@ depgen:
  list-equip-slots.h obj-identify.h obj-tval.h list-tvals.h obj-pile.h \
  obj-util.h player-history.h list-history-types.h player-spell.h \
  player-timed.h list-player-timed.h player-util.h score.h store.h \
- tables.h target.h wizard.h
+ target.h wizard.h
 ./player.o: player.c init.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-file.h z-rand.h parser.h z-dice.h z-expression.h obj-pile.h cave.h \
  z-type.h list-square-flags.h list-terrain-flags.h player.h guid.h \
@@ -882,7 +879,7 @@ depgen:
  list-blow-methods.h mon-blow-effects.h list-blow-effects.h \
  list-mon-temp-flags.h list-mon-race-flags.h list-mon-spells.h init.h \
  parser.h mon-util.h player-timed.h list-player-timed.h project.h \
- list-project-environs.h list-project-monsters.h tables.h
+ list-project-environs.h list-project-monsters.h
 ./project-feat.o: project-feat.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
  message.h message-list.h option.h z-file.h list-options.h player.h \
@@ -987,14 +984,6 @@ depgen:
  obj-info.h z-textblock.h obj-make.h obj-pile.h obj-power.h obj-slays.h \
  obj-tval.h list-tvals.h obj-util.h player-history.h list-history-types.h \
  store.h target.h debug.h
-./tables.o: tables.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
- z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
- message-list.h option.h z-file.h list-options.h player.h guid.h \
- obj-properties.h list-stats.h list-object-flags.h list-kind-flags.h \
- list-object-modifiers.h object.h z-quark.h z-dice.h z-expression.h \
- effects.h list-effects.h list-elements.h list-identify-flags.h \
- list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
- tables.h
 ./target.o: target.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -1024,8 +1013,8 @@ depgen:
  list-object-modifiers.h object.h z-quark.h z-dice.h z-expression.h \
  effects.h list-effects.h list-elements.h list-identify-flags.h \
  list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
- cave.h list-square-flags.h list-terrain-flags.h tables.h ui-input.h \
- cmd-core.h ui-event.h ui-term.h ui.h z-textblock.h
+ cave.h list-square-flags.h list-terrain-flags.h ui-input.h cmd-core.h \
+ ui-event.h ui-term.h ui.h z-textblock.h
 ./ui-birth.o: ui-birth.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
  z-color.h z-util.h z-rand.h config.h game-event.h z-type.h message.h \
  message-list.h option.h z-file.h list-options.h player.h guid.h \
@@ -1191,8 +1180,8 @@ depgen:
  list-mon-temp-flags.h list-mon-race-flags.h list-mon-spells.h mon-util.h \
  obj-desc.h obj-identify.h obj-ignore.h list-ignore-types.h obj-info.h \
  obj-make.h obj-pile.h obj-tval.h list-tvals.h obj-util.h \
- player-history.h list-history-types.h store.h tables.h target.h \
- ui-context.h ui-input.h ui-event.h ui-term.h ui-history.h ui-menu.h ui.h \
+ player-history.h list-history-types.h store.h target.h ui-context.h \
+ ui-input.h ui-event.h ui-term.h ui-history.h ui-menu.h ui.h \
  ui-mon-list.h ui-mon-lore.h ui-obj.h ui-obj-list.h ui-options.h \
  ui-prefs.h ui-score.h ui-store.h ui-target.h wizard.h
 ./ui-map.o: ui-map.c angband.h h-basic.h z-bitflag.h z-form.h z-virt.h \
@@ -1216,8 +1205,8 @@ depgen:
  list-object-modifiers.h object.h z-quark.h z-dice.h z-expression.h \
  effects.h list-effects.h list-elements.h list-identify-flags.h \
  list-origins.h player-calcs.h list-player-flags.h list-magic-realms.h \
- tables.h ui-target.h ui-event.h ui-input.h cmd-core.h ui-term.h \
- ui-menu.h ui.h z-textblock.h
+ cave.h list-square-flags.h list-terrain-flags.h ui-target.h ui-event.h \
+ ui-input.h cmd-core.h ui-term.h ui-menu.h ui.h z-textblock.h
 ./ui-mon-list.o: ui-mon-list.c mon-desc.h monster.h h-basic.h z-bitflag.h \
  z-form.h z-virt.h z-rand.h cave.h z-type.h list-square-flags.h \
  list-terrain-flags.h mon-timed.h list-mon-timed.h mon-blow-methods.h \
@@ -1288,9 +1277,9 @@ depgen:
  list-magic-realms.h cmds.h cave.h list-square-flags.h \
  list-terrain-flags.h cmd-core.h game-input.h init.h parser.h obj-desc.h \
  obj-ignore.h list-ignore-types.h obj-tval.h list-tvals.h obj-util.h \
- tables.h ui-display.h ui-help.h ui-input.h ui-event.h ui-term.h \
- ui-keymap.h ui-knowledge.h ui-menu.h ui.h z-textblock.h ui-options.h \
- ui-prefs.h ui-target.h
+ ui-display.h ui-help.h ui-input.h ui-event.h ui-term.h ui-keymap.h \
+ ui-knowledge.h ui-menu.h ui.h z-textblock.h ui-options.h ui-prefs.h \
+ ui-target.h
 ./ui-player.o: ui-player.c angband.h h-basic.h z-bitflag.h z-form.h \
  z-virt.h z-color.h z-util.h z-rand.h config.h game-event.h z-type.h \
  message.h message-list.h option.h z-file.h list-options.h player.h \
@@ -1381,7 +1370,7 @@ depgen:
  list-mon-race-flags.h list-mon-spells.h mon-lore.h z-textblock.h \
  obj-desc.h obj-pile.h obj-util.h player-attack.h player-timed.h \
  list-player-timed.h project.h list-project-environs.h \
- list-project-monsters.h tables.h target.h trap.h list-trap-flags.h ui.h \
+ list-project-monsters.h target.h trap.h list-trap-flags.h ui.h \
  ui-event.h ui-term.h ui-input.h ui-keymap.h ui-map.h ui-mon-lore.h \
  ui-obj.h ui-target.h
 ./ui-term.o: ui-term.c buildid.h h-basic.h ui-term.h ui-event.h z-color.h \
@@ -1431,8 +1420,8 @@ depgen:
  list-mon-timed.h mon-blow-methods.h list-blow-methods.h \
  mon-blow-effects.h list-blow-effects.h list-mon-temp-flags.h \
  list-mon-race-flags.h list-mon-spells.h init.h parser.h mon-make.h \
- obj-pile.h obj-randart.h obj-tval.h list-tvals.h obj-util.h tables.h \
- ui-command.h wizard.h
+ obj-pile.h obj-randart.h obj-tval.h list-tvals.h obj-util.h ui-command.h \
+ wizard.h
 ./buildid.o: buildid.c buildid.h
 ./z-bitflag.o: z-bitflag.c z-bitflag.h h-basic.h z-form.h z-virt.h
 ./z-color.o: z-color.c h-basic.h z-color.h z-util.h
