--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -25,7 +25,6 @@ HEADERS = \
 	parser.h \
 	types.h \
 	ui-event.h \
-	ui.h \
 	ui-menu.h \
 	wizard.h \
 	z-bitflag.h \
@@ -162,7 +161,6 @@ ANGFILES = \
 	store.o \
 	target.o \
 	trap.o \
-	ui.o \
 	ui-birth.o \
 	ui-command.o \
 	ui-context.o \
@@ -184,6 +182,7 @@ ANGFILES = \
 	ui-obj-list.o \
 	ui-object.o \
 	ui-options.o \
+	ui-output.o \
 	ui-player.o \
 	ui-prefs.o \
 	ui-score.o \
